2003-03-19  Bradley Bell  <btb@icculus.org>

	* arch/win32/ipx_win.c, configure.ac: ipx on win32 fixed!

2003-03-19  Martin Schaffner <maschaffner@gmx.ch>

	* 2d/rle.c, include/gr.h, include/rle.h, main/bm.c, main/bm.h,
	main/gamemine.c, main/gamemine.h, main/gameseq.c, main/piggy.c,
	main/piggy.h: if descent.pig available, load d1 textures for d1
	levels

2003-03-19  Bradley Bell  <btb@icculus.org>

	* 2d/font.c, 2d/palette.c, 3d/interp.c, 3d/setup.c,
	arch/sdl/rbaudio.c, include/texmap.h, libmve/decoder16.c,
	libmve/decoder8.c, libmve/decoders.h, libmve/mveplay.c,
	texmap/ntmap.c, texmap/texmapl.h: header/extern declaration
	housekeeping

	* README: added some OS X info

2003-03-17  Bradley Bell  <btb@icculus.org>

	* main/newdemo.c: simplify DEMO_FILENAME macro

	* main/console.c, main/game.c: enable experimental console support

	* main/gamerend.c: fixed location of fps meter in multi

2003-03-16  Bradley Bell  <btb@icculus.org>

	* main/menu.c, main/newdemo.c, main/newdemo.h, main/newmenu.c:
	also look in shared data dir for demos

	* main/newdemo.c, main/newdemo.h: comments/formatting

2003-03-15  Christopher Thielen  <chris@luethy.net>

	* main/kludge.c: set CDROM_dir back to "." - tricks game into
	thinking d2 cd is always present

2003-03-15  Bradley Bell  <btb@icculus.org>

	* 2d/font.c, main/credits.c, main/scores.c: fixed opengl credits,
	scores

	* arch/sdl/rbaudio.c: formatting, enabled volume control under
	linux

	* arch/ogl/gr.c: fixed dark font bug by calling gr_set_mode from
	gr_init.  don't really know why this works, though

2003-03-14  Bradley Bell  <btb@icculus.org>

	* main/gameseq.c: fix Bitmap_replacement_data mem leakage

	* unused/bios/rbaudio.h: removed duplicate file

2003-03-14  Christopher Thielen  <chris@luethy.net>

	* arch/sdl/rbaudio.c: stop cd audio when exiting

2003-03-14  Micah J. Lieske  <MicahJon@compuserve.com>

	* main/gamecntl.c: add comments to the "only matt knows" cheats
