@@ -2,7 +2,7 @@ EXTRA_SUBDIRS = include
 
 noinst_LIBRARIES = libarch_linux.a
 
-INCLUDES = -I$(top_srcdir)/arch/include -I$(top_srcdir)/include -I$(top_srcdir)/main -I$(srcdir)/include
+INCLUDES = -I$(top_srcdir)/arch/include -I$(top_srcdir)/include -I$(srcdir)/include
 
 if USE_NETWORK
 NETWORK_SRCS = ipx_bsd.c ipx_kali.c ipx_lin.c ipx_udp.c linuxnet.c ukali.c
